#code #commit Set correct whitespace around cards.

--- a/src/css/_card.scss
+++ b/src/css/_card.scss
@@ -3,7 +3,6 @@
   overflow: hidden;
   border: 1px solid #f4f5f7;
   font-size: 14px;
-  margin-bottom: 8px;
 
   .picHolder {
     position: relative;
