--- a/src/css/_marketplace.scss
+++ b/src/css/_marketplace.scss
@@ -38,7 +38,9 @@
     }
   }
 
-  .apps {
-    grid-column: 1 / span 12;
+  .card {
+    &.wide {
+      grid-column: 1 / span 12;
+    }
   }
 }
